--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <router-outlet></router-outlet>
-<!-- <input type="text"  [(ngModel)]="textValue"> 
+<h1>Sumit</h1>
+<!-- <input type="text"  [(ngModel)]="textValue">
 <button (click)="ClickButton()">Sent Value</button>
 <app-client-one [InputString]="SendValueToChild"> </app-client-one> -->
